/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package basecluster.fd;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.basecluster.fd.proto";
option java_outer_classname = "PingReqProtos";
option optimize_for = SPEED;

message PingReq {
  uint32 seqNo = 1; // seqNo used to track ack

  bytes id = 2; // id of the ping member indirectly
  string addr = 3; // addr of the ping member indirectly
  uint32 port = 4; // port of the ping member indirectly

  bytes pingerId = 5; // id of the pinger member
  string pingerAddr = 6; // addr of the original pinger member
  uint32 pingerPort = 7; // port of the original pinger member
}
